// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarNavItem should match snapshot 1`] = `
<scale-sidebar-nav-item>
  <template shadowrootmode="open">
    <li class="sidebar-nav-item" part="sidebar-nav-item" role="listitem">
      <slot></slot>
    </li>
  </template>
</scale-sidebar-nav-item>
`;

exports[`SidebarNavItem should match snapshot 2`] = `
<scale-sidebar-nav-item>
  <template shadowrootmode="open">
    <li class="sidebar-nav-item" part="sidebar-nav-item" role="listitem">
      <slot></slot>
    </li>
  </template>
  <a href="#">
    Some foo
  </a>
</scale-sidebar-nav-item>
`;

exports[`SidebarNavItem should match snapshot after using createScreenReaderOnlySpan() 1`] = `
<scale-sidebar-nav-item active="">
  <template shadowrootmode="open">
    <li class="sidebar-nav-item sidebar-nav-item--active" part="sidebar-nav-item active" role="listitem">
      <slot></slot>
    </li>
  </template>
  <a aria-current="page" href="#">
    Some foo
    <span style="position: absolute; left: -10000px; overflow: hidden;">
      currentText
    </span>
  </a>
</scale-sidebar-nav-item>
`;

exports[`SidebarNavItem should match snapshot after using createScreenReaderOnlySpan() 2`] = `
<scale-sidebar-nav-item active="">
  <template shadowrootmode="open">
    <li class="sidebar-nav-item sidebar-nav-item--active" part="sidebar-nav-item active" role="listitem">
      <slot></slot>
    </li>
  </template>
  <a aria-current="page" href="#">
    Some foo
    <span style="position: absolute; left: -10000px; overflow: hidden;">
      Zurzeit aktiv
    </span>
  </a>
</scale-sidebar-nav-item>
`;

exports[`SidebarNavItem should match snapshot after using currentChanged() 1`] = `
<scale-sidebar-nav-item active="">
  <template shadowrootmode="open">
    <li class="sidebar-nav-item sidebar-nav-item--active" part="sidebar-nav-item active" role="listitem">
      <slot></slot>
    </li>
  </template>
  <a aria-current="page" href="#">
    Some foo
    <span style="position: absolute; left: -10000px; overflow: hidden;">
      Zurzeit aktiv
    </span>
  </a>
</scale-sidebar-nav-item>
`;

exports[`SidebarNavItem should match snapshot after using currentChanged() 2`] = `
<scale-sidebar-nav-item>
  <template shadowrootmode="open">
    <li class="sidebar-nav-item" part="sidebar-nav-item" role="listitem">
      <slot></slot>
    </li>
  </template>
  <a href="#">
    Some foo
  </a>
</scale-sidebar-nav-item>
`;
